coupon applied in checkout user side

--- a/views/user/checkOutDetails.ejs
+++ b/views/user/checkOutDetails.ejs
@@ -67,7 +67,7 @@
                  <div class="" style="height: 100px;">
                     
                     <div class="col-3 w-100" style="height: 50px;">
-                        <p style="float: right;padding-right: 50px;margin-top: 12px;">Total: ₹ <%= checkout.cart?.totalAmount %></p>
+                        <p style="float: right;padding-right: 50px;margin-top: 12px;">Total: ₹ <%= checkout.totalPrice %></p>
                     </div>
                     <div class="col-3 w-100 d-flex justify-content-between align-items-center px-5" style="height: 50px;">
                         <div>
