--- a/views/admin/notification.ejs
+++ b/views/admin/notification.ejs
@@ -108,6 +108,25 @@
                     <a class="nav-link in-active" href="/admin/couponsHistory"><i class="fas fa-ticket-alt"></i> Coupons history</a>
                 </li>
                 <li class="nav-item">
+                    <!-- <a class="nav-link in-active"><i class="fas fa-ticket-alt"></i> Coupons history</a> -->
+                     <select class="form-select" id="offerSelect" aria-label="Default select example"
+                     style="
+                        margin-bottom: 15px;
+                        padding: 12px 12px;
+                        text-align: center;
+                        border: 3px solid  #eef7ff;
+                        color: #eef7ff;
+                        background-color: #4D869C;
+                        border-radius: 12px;
+                        " 
+                     >
+                        <option selected disabled class="selectOption">Offers</option>
+                        <option  value="/admin/productOffers" class="selectOption">Product Offers</option>
+                        <option  value="/admin/categoryOffers" class="selectOption">Category Offers</option>
+                        <!-- <option value="3" class="selectOption">Referral Offers</option> -->
+                      </select>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="/admin/notifications"><i class="fas fa-bell"></i> Notifications</a>
                 </li>
             </ul>
@@ -126,6 +145,15 @@
             <p style="color: #4D869C;">No Notifications</p>
         </div>
     </main>
+
+    <script>
+        document.getElementById('offerSelect').addEventListener('change', function() {
+        var selectedOption = this.value;
+        if (selectedOption) {
+            window.location.href = selectedOption;
+        }
+    });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
