--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -121,6 +121,25 @@
                                 Coupons history</a>
                         </li>
                         <li class="nav-item">
+                            <!-- <a class="nav-link in-active"><i class="fas fa-ticket-alt"></i> Coupons history</a> -->
+                             <select class="form-select" id="offerSelect" aria-label="Default select example"
+                             style="
+                                margin-bottom: 15px;
+                                padding: 12px 12px;
+                                text-align: center;
+                                border: 3px solid  #eef7ff;
+                                color: #eef7ff;
+                                background-color: #4D869C;
+                                border-radius: 12px;
+                                " 
+                             >
+                                <option selected disabled class="selectOption">Offers</option>
+                                <option  value="/admin/productOffers" class="selectOption">Product Offers</option>
+                                <option  value="/admin/categoryOffers" class="selectOption">Category Offers</option>
+                                <!-- <option value="3" class="selectOption">Referral Offers</option> -->
+                              </select>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link in-active" href="/admin/notifications"><i class="fas fa-bell"></i>
                                 Notifications</a>
                         </li>
@@ -175,7 +194,9 @@
                                             </td>
                                            
                                             <td>
-                                                <%=data.cart.items[index].quantity %>
+                                                
+                                                <%let totalQuantity = data.cart.items.reduce((total, item) => total + item.quantity, 0); %>
+                                                <%=totalQuantity %>
                                             </td>
                                             <td>
                                                 <%=data.totalPrice %>
@@ -341,7 +362,12 @@ const rowsPerPage = 5;
 
 
 
-
+    document.getElementById('offerSelect').addEventListener('change', function() {
+    var selectedOption = this.value;
+    if (selectedOption) {
+        window.location.href = selectedOption;
+    }
+});
 
 
 
