--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -35,6 +35,33 @@
 	<script defer src="/js/jquery.magnific-popup.min.js"></script>
 	<script defer src="/js/owl.carousel.min.js"></script>
 	<script defer src="/js/main.js"></script>
+
+
+	<style>
+        /* offer ribbon */
+		.offerRibbon{
+			
+			width: 100%;
+			height: 45px;
+			position: absolute;
+			z-index: 20;
+			text-align: center;
+			margin-left: -104px;
+			margin-top: 20px;
+			transform: rotate(-40deg);
+			padding-top: 10px;
+			background-color: #ff6c00;
+		}
+
+		.offerRibbon > span{
+		
+		    font-weight: 700;
+			font-size: 1.5rem;
+			color: #ffff;
+
+		}
+
+    </style>
    
 </head>
 
@@ -307,23 +334,40 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row justify-content-around">
 					
 					<!-- loop start -->
 					<% products.forEach(function(product, index) { %>
 						<% if (product?.deleted === false) { %>
 
-							<div class="col-lg-3 col-md-6 shadow-sm">
+							<div class="col-lg-3 col-md-6 shadow-sm p-3" style="position: relative;overflow: hidden;">
+								<% if(product?.offerHasApplied) { %>
+                                    <div class="offerRibbon">
+                                        <span>
+                                            offer
+                                        </span>
+                                    </div>
+                                <% } %>
 								<div class="single-product">
 									<a href="/productDetails/<%= encodeURIComponent(product?._id) %>">
 										<img class="img-fluid" src="<%= product.variants[0]?.imageUrls[1] %>" alt="img">
 									</a>
-									<div class="product-details">
-										<h6><%= product.name %></h6>
-										<div class="price">
-											<h6>₹<%= product.price %></h6>
-											<h6 class="l-through">₹<%= product.price + 5000 %></h6>
-										</div>
+									<div class="product-details" style="line-height: 2;">
+										<h6><%= product?.name %></h6>
+                                    <div class="price">
+										<% if(product?.offerHasApplied){ %>
+                                        <h6>₹<%= product?.discountedPrice %></h6>
+                                        <span>
+											<h6 class="l-through">₹<%= product?.price %></h6>
+										    <%=product?.category?.discountPercentage%>% off
+										</span>
+										<% }else{ %>
+                                        <h6>₹<%= product?.price %></h6>
+                                        <% } %>
+                                    </div>
+                                    <h6>Gender: <%=product?.gender  %></h6>
+                                    <h6>Category: <%=product?.category?.name  %></h6>
+                                    <h6>band: <%=product?.brand  %></h6>
 										<div class="prd-bottom d-flex justify-content-around align-items-center">
 											<a href="/productDetails/<%= encodeURIComponent(product._id) %>">
 												<button class="btn">
@@ -337,6 +381,7 @@
 										</div>
 									</div>
 								</div>
+
 							</div>
 						<% } %>
 					<% }) %>
@@ -355,64 +400,49 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row justify-content-around">
 					
 					<!-- loop start -->
 					<% products.forEach(function(product, index) { %>
 						<% if (product?.deleted === false) { %>
-							<div class="col-lg-3 col-md-6 shadow-sm">
+							<div class="col-lg-3 col-md-6 shadow-sm p-3" style="position: relative;overflow: hidden;">
+								<% if(product?.offerHasApplied) { %>
+                                    <div class="offerRibbon">
+                                        <span>
+                                            offer
+                                        </span>
+                                    </div>
+                                <% } %>
 								<div class="single-product">
 									<a href="/productDetails/<%= encodeURIComponent(product?._id) %>">
 										<img class="img-fluid" src="<%= product.variants[0]?.imageUrls[1] %>" alt="img">
 									</a>
-									<div class="product-details">
+									<div class="product-details" style="line-height: 2;">
 										<h6><%= product?.name %></h6>
 										<div class="price">
-											<h6>₹<%= product.price %></h6>
-											<h6 class="l-through">₹<%= product.price + 5000 %></h6>
+											<% if(product?.offerHasApplied){ %>
+											<h6>₹<%= product?.discountedPrice %></h6>
+											<span>
+												<h6 class="l-through">₹<%= product?.price %></h6>
+												<%=product?.category?.discountPercentage%>% off
+											</span>
+											<% }else{ %>
+											<h6>₹<%= product?.price %></h6>
+											<% } %>
 										</div>
-										<div class="prd-bottom">
-											<form action="/addToCart" method="POST" class="social-info  w-100 d-flex flex-wrap align-content-center justify-content-between" 
-											style="height: 150px;"
-											>
-												<input type="hidden" name="productId" value="<%= encodeURIComponent(product?._id) %>">
-												<input type="hidden" name="name" value="<%= product.name %>">
-												<input type="hidden" name="price" value="<%= product.price %>">
-												<input type="hidden" name="brand" value="<%= product.brand %>">
-												<input type="hidden" name="gender" value="<%= product.gender %>">
-												<div style="margin: 10px;width: 60px;">
-													<label for="variantSize" style="display: block;">Size:</label>
-													<select name="variantSize" id="variantSize" style="width: 50%; padding: 5px;" required>
-														<% product.variants.forEach(function(variant) { %>
-															<option value="<%= variant.size %>"><%= variant.size %></option>
-														<% }); %>
-													</select>
-												</div>
-												<div style="margin: 10px;width: 60px;">
-													<label for="variantColor" style="display: block;">Color:</label>
-													<select name="variantColor" id="variantColor" style="width: 50%; padding: 5px;" required>
-														<% product.variants.forEach(function(variant) { %>
-															<option value="<%= variant.color %>"><%= variant.color %></option>
-														<% }); %>
-													</select>
-												</div>
-												<div style="margin-top: 12px;width: 60px;">
-													<label for="qty" style="display: block;">Quantity:</label>
-													<input type="number" name="qty" id="qty" value="1" min="1" max="<%= Math.min(...product.variants.map(v => v.stock)) %>" style="width: 100%; padding: 5px;" required>
-												</div>
-												<div style="margin-top: 12px;width: 100%; " class="d-flex">
-													<button type="submit" class="add-to-cart-btn px-3" style="background-color: transparent !important; outline: none !important; border: none;">
-														<span class="ti-bag"></span>
-														<!-- <p class="hover-text">add to cart</p> -->
-													</button>
-												
-													<a href="/wishlist/add/<%= encodeURIComponent(product?._id) %>" class="social-info">
-														<span class="lnr lnr-heart"></span>
-														<p class="hover-text">Wishlist</p>
-													</a>
-												</div>
-											</form>
-											
+                                    <h6>Gender: <%=product?.gender  %></h6>
+                                    <h6>Category: <%=product?.category?.name  %></h6>
+                                    <h6>band: <%=product?.brand  %></h6>
+										<div class="prd-bottom d-flex justify-content-around align-items-center">
+											<a href="/productDetails/<%= encodeURIComponent(product._id) %>">
+												<button class="btn">
+													View Details
+												</button>
+											</a>
+											<a  href="/wishlist/add/<%= encodeURIComponent(product._id) %>" class="social-info">
+												<span class="lnr lnr-heart"></span>
+												<p class="hover-text">Wishlist</p>
+											</a>
 										</div>
 									</div>
 								</div>
