--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -36,6 +36,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha512-DUC8yqWf7ez3JD1jszxCWSVB0DMP78eOyBpMa5aJki1bIRARykviOuImIczkxlj1KhVSyS16w2FSQetkD4UU2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+    <style>
+        /* offer ribbon */
+		.offerRibbon{
+			
+			width: 100%;
+			height: 45px;
+			position: absolute;
+			z-index: 20;
+			text-align: center;
+			margin-left: -104px;
+			margin-top: 20px;
+			transform: rotate(-40deg);
+			padding-top: 10px;
+			background-color: #ff6c00;
+		}
+
+		.offerRibbon > span{
+		
+		    font-weight: 700;
+			font-size: 1.5rem;
+			color: #ffff;
+
+		}
+
+    </style>
+
 </head>
 <body id="category">
     <!-- Start Header Area -->
@@ -123,7 +151,7 @@
     </section>
     <!-- End Banner Area -->
 
-<div class="container py-5">
+    <div class="container-fluid p-5">
     <div class="row">
         <div class="col-12 mb-3">
           <div class="row" style="float: right;">
@@ -227,20 +255,34 @@ style="background-color: <%= (query.gender === 'womens') ? '#ff6c00' : 'transpar
         </div>
         <div class="col-xl-9 col-lg-8 col-md-7">
             <section class="lattest-product-area pb-40 category-list">
-                <div class="row flex-wrap shadow" style="height: 78em;">
+                <div class="row flex-wrap shadow justify-content-around" style="height: 78em;">
                     <% if(products && products.length >= 0) { %>
                         <% products.forEach(function(product) { %>
 
                         <% if(product?.deleted===false){ %>
-                            <div class="col-4 single-product shadow mx-5 my-3" style="width: 250px;height: 480px;">
+                            <div class="col-3 single-product shadow my-5 p-3" style="width: 250px;height: 480px;position: relative;overflow: hidden;">
+                                <% if(product?.offerHasApplied) { %>
+                                    <div class="offerRibbon">
+                                        <span>
+                                            offer
+                                        </span>
+                                    </div>
+                                <% } %>
                                 <a href="/productDetails/<%= encodeURIComponent(product._id) %>">
                                     <img class="img-fluid" src="<%= product?.variants[0]?.imageUrls[0] %>" alt="img">
                                 </a>
                                 <div class="product-details">
                                     <h6><%= product?.name %></h6>
                                     <div class="price">
+										<% if(product?.offerHasApplied){ %>
+                                        <h6>₹<%= product?.discountedPrice %></h6>
+                                        <span>
+											<h6 class="l-through">₹<%= product?.price %></h6>
+										    <%=product?.category?.discountPercentage%>% off
+										</span>
+										<% }else{ %>
                                         <h6>₹<%= product?.price %></h6>
-                                        <h6 class="l-through">₹<%= product?.price + 5000 %></h6>
+                                        <% } %>
                                     </div>
                                     <h6>Gender: <%=product?.gender  %></h6>
                                     <h6>Category: <%=product?.category?.name  %></h6>
